--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
+body {
+  font-family: Sailec,"helvetica neue",helvetica,-apple-system,BlinkMacSystemFont,ubuntu,roboto,noto,"segoe ui",arial,sans-serif !important;
+  color: #404345;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* loan calculator styling */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.loanFormAndResultsContainer {
   display: flex;
   flex-direction: column;
+}
+
+
+/* loan calculator form styling */
+.loanCalculatorForm {
+  font-size: 16px;
+  font-weight: 450;
+  line-height: 20px;
+  padding: 0 20px 20px;
+}
+
+.loanCalculatorForm h3{
+  color: #404345;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 31px;
+  margin: 0;
+  padding: 20px 0;
+}
+
+.loanAmountInputContainer, .loanTermMonthsInputContainer, .interestRateInputContainer, .extraMonthlyPaymentInputContainer, .extraYearlyPaymentContainer, .extraOneTimePaymentContainer {
+  margin-bottom: 5px;
+}
+
+#loanAmount, #loanTermMonths, #interestRate, #extraMonthlyPayment, #extraYearlyPayment, #extraOneTimePayment {
+  border: 1px solid #d1d7db;
+  border-radius: 2px;
+  height: 34px;
+  margin: 5px 0;
+  width: 225px;
+  font-size: 16px;
+  font-weight: 450;
+  line-height: 20px;
+  color: #404345;
+}
+
+.loanAmountLabel, .loanTermMonthsLabel, .interestRateLabel {
+  vertical-align: middle;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.loanCalculateButtonContainer {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loanCalculateButton {
+  margin: auto;
+  background-color: #3ddb93;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 400;
+  line-height: 40px;
+  padding: 0 70px;
+  font-size: 16px;
+}
+
+/* loan results  styling */
+
+.loanCalculatorResultsContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.loanResultsContainer {
+  display: flex;
+}
+
+/* extra payments styling */
+
+.loanCalculatorResultsContainer select {
+  background: #fff;
+  border: 1px solid #d1d7db;
+  border-radius: 2px;
+  height: 34px;
+  margin: 2px 0 5px 0;
+  padding: 0 10px;
+  vertical-align: middle;
+}
+
+.extraMonthlyPaymentInputContainer, .extraYearlyPaymentInputContainer, .extraOneTimePaymentInputContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.showExtraPaymentsButton {
+  color: #20a7e2;
+  background-color: white !important;
+  border: none;
+  margin: 10px 0
+}
+
+.angleUpIcon, .angleDownIcon {
+  padding-left: 5px;
+}
+
+.selectContainer {
+  display: flex;
+  align-items: center;
+}
+
+.selectContainer p {
+  margin: 0;
+  padding-right: 5px;
+}
+
+/* amortization table styling */
+
+.amortTableHeaderContainer, .amortTableRow {
+  display: flex ;
+}
+
+.amortTableHeader, .amortTableCell {
+  padding: 10px ;
+  width: 100px;
 }
