added donut chart

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   font-family: Sailec,"helvetica neue",helvetica,-apple-system,BlinkMacSystemFont,ubuntu,roboto,noto,"segoe ui",arial,sans-serif !important;
   color: #404345;
+  background-color: #f1f5f8;
 }
 
 /* loan calculator styling */
@@ -12,11 +13,22 @@ body {
 
 
 /* loan calculator form styling */
+.calculatorContainer {
+  margin-right: 20px;
+  border-right: 1px solid #e6e6e6;
+  width: 251px;
+  min-width: 251px;
+  height: 360px;
+}
+
 .loanCalculatorForm {
   font-size: 16px;
   font-weight: 450;
   line-height: 20px;
-  padding: 0 20px 20px;
+  margin: 20px 20px 20px;
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 0 20px 20px rgba(0,0,0, 0.2), 0px 0px 50px rgba(0,0,0, 0.2);
 }
 
 .loanCalculatorForm h3{
@@ -25,7 +37,7 @@ body {
   font-weight: 300;
   line-height: 31px;
   margin: 0;
-  padding: 20px 0;
+  padding: 20px 20px;
 }
 
 .loanAmountInputContainer, .loanTermMonthsInputContainer, .interestRateInputContainer, .extraMonthlyPaymentInputContainer, .extraYearlyPaymentContainer, .extraOneTimePaymentContainer {
@@ -69,12 +81,29 @@ body {
 /* loan results  styling */
 
 .loanCalculatorResultsContainer {
+  padding: 0 20px 20px 20px;
   display: flex;
-  justify-content: space-between;
+  max-width: 1100px;
 }
 
 .loanResultsContainer {
   display: flex;
+}
+
+.loanResultsContainer h3 {
+  padding: 0 15px;
+  margin-top: 0;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.loanResultsContainer p {
+  padding: 0 30px 10px 30px;
+  margin-top: 0;
+  text-align: center;
+  font-size: 18px;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 /* extra payments styling */
@@ -116,12 +145,141 @@ body {
 }
 
 /* amortization table styling */
+.amortizationTableContainer {
+  margin: 20px 20px 20px;
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 0 20px 20px rgba(0,0,0, 0.2), 0px 0px 50px rgba(0,0,0, 0.2);
+}
+
+.amortizationTableButtonContainer {
+
+}
+
+.amortTableContainer {
+  padding: 20px;
+}
+
+.showAmortTableButton {
+  background-color: white;
+  width: 100%;
+  border: none;
+  padding: 20px 20px;
+  font-size: 24px;
+  border-radius: 30px;
+}
+
+.loanStartDateInputContainer {
+  padding-left: 20px;
+}
+
+.loanStartDateInputContainer input {
+  display: block;
+  border: 1px solid #d1d7db;
+  border-radius: 2px;
+  height: 34px;
+  margin: 5px 0;
+  width: 225px;
+  font-size: 16px;
+  font-weight: 450;
+  line-height: 20px;
+  color: #404345;
+}
+
+.showAmortTableButton div {
+  display: flex;
+  justify-content: space-between;
+}
 
 .amortTableHeaderContainer, .amortTableRow {
   display: flex ;
+  justify-content: space-between;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .amortTableHeader, .amortTableCell {
   padding: 10px ;
   width: 100px;
+}
+
+#amortTableHeader1 {
+  width: 120px;
+  padding-left: 0;
+}
+
+#amortTableHeader6 {
+  padding-right: 0;
+}
+
+.amortTableColumn1 {
+  width: 120px;
+  padding-left: 0;
+}
+
+.amortTableColumn6 {
+  padding-right: 0;
+}
+
+
+#amortTableHeader2, #amortTableHeader3, #amortTableHeader4, #amortTableHeader5, #amortTableHeader6 {
+  text-align: right;
+}
+
+.amortTableColumn2, .amortTableColumn3, .amortTableColumn4, .amortTableColumn5, .amortTableColumn6 {
+  text-align: right;
+}
+
+/* amortization start date styling */
+.amortizationStartDateContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.payoffDateContainer {
+  padding-right: 20px;
+}
+
+.payoffDateContainer h3 {
+  margin-top: 0;
+}
+
+/* styling for scrollbar  */
+.simplebar-scrollbar:before {
+  opacity: .5;
+}
+
+/* styling for slider element */
+.slider {
+  -webkit-appearance: none;
+  width: 225px;
+  height: 10px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 19px;
+  height: 19px;
+  border-radius: 50%;
+  background: #3ddb93;
+  cursor: pointer;
+}
+
+
+canvas{
+
+  width: 400px !important;
+  height: 200px !important;
+  margin: 0 auto 20px auto;
+
 }
